<resources>
    <string name="facebook_app_id">386042973026214</string>
    <string name="fb_login_protocol_scheme">fb386042973026214</string>
    <string name="facebook_client_token">a7cc454cc8535abe790dbc8d9ad7dc61</string>
    <string name="app_name">Patient</string>
    <string name="roots_care">Roots Care</string>
    <string name="home">Home</string>
    <string name="no_data">No data found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="location_permission">Location Permission</string>
    <string name="ok">OK</string>
    <string name="your_string_here"> <u>Write Your Review</u></string>
    <string name="more"><u>More..</u></string>
    <string name="transition_string">transition_name</string>
    <string name="upload_document">Upload Document</string>
    <string name="upload_another_result">Upload Another Result</string>
    <string name="select_file">Select file (.jpg, .png, .pdf)</string>
    <string name="select_pdf">Select PDF file (.pdf)</string>
    <string name="capture_or_select_image">Capture or select Image (.jpg, .png)</string>
    <string name="need_these_permission">Need these permissions</string>
    <string name="warning">Warning</string>
    <string name="please_select_at_least_one_file_to_upload">Please select at least one file to upload</string>
    <string name="you_have_selected_maximum_number_of_files">You have selected maximum number of files</string>
    <string name="choose_name_for_this_file">Choose a name for this file</string>
    <string name="submit">Submit</string>
    <string name="enter_description">Enter description</string>
    <string name="create_file_name">Create file name</string>
    <string name="pleaese_enter_some_description">Please enter some description</string>
    <string name="pleaese_create_name_for_this_file">Please create name for selected file</string>
    <string name="review_more">More..</string>
    <string name="review_less">Less..</string>
    <string name="care_giver">Caregiver</string>
    <string name="select_time">Select Time ( Each slot mean to 30 min )</string>
    <string name="select_time_sl">Select Time</string>
    <string name="select_start_time">Select start time</string>
    <string name="search_for_care_giver_name">Search by caregiver name</string>
    <string name="network_unavailable">Please Check Your Network Connection</string>
    <string name="server_alert">Some server problem has been encountered</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="okay">OK</string>
    <string name="agree">Agree</string>
    <string name="do_not_agree">Don\'t Agree</string>
    <string name="terms_agree">I Agree</string>
    <string name="camera_cancel">Cancel</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="complete">Complete</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="heading_video_call">Video Consultation</string>
    <string name="thank_you">Thank You</string>
    <string name="successful">Successful</string>
    <string name="congratulations_submission_text">Congratulations, Roots Care Submission is successfully done.</string>
    <string name="congratulations_transaction_text">Congratulations, Roots Care Transaction is successfully done.</string>
    <string name="support_amp_more">Support &amp; More</string>
    <string name="best_company_for_medical_home_healthcare">The Best Company\nfor Medical Services\n &amp; Home Healthcare</string>
    <string name="language_preference">Language Preference</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_rootscare">About Rootscare</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="need_support">Need Support?</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="post_your_issue_text">Post your issue here, we will call you in 24-48 business hours. Or you if you have anything urgent call us at +44 8978 6363 00 number.</string>
    <string name="select_a_topic">Select a Topic</string>
    <string name="write_your_issue_in_details_here">Write your issue in details here.</string>
    <string name="please_select_topic">Please select a topic</string>
    <string name="select_user_type">Select User Type</string>
    <string name="select_provider_type">Select Provider Type</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="continue_">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="did_not_recev_email">Didn\'t received email?</string>
    <string name="not_receivd_code">Not received code?</string>
    <string name="cant_login_help">Can\'t Login, Need help?</string>
    <string name="swipe_right_to_left">Swipe right to left</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email_id_mobile_number">Email Id/Mobile Number</string>
    <string name="sign_up">Sign up</string>
    <string name="register_to_open_your_account">Register to open your Account</string>
    <string name="sent_code_subtext">We have sent the verification code to your mobile number</string>
    <string name="create_new_pwd_subtext">Your new password must be different from previous used passwords.</string>
    <string name="forgot_password_subtext">Enter the email associated with your account and we\'ll send an email with instruction to reset your password.</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters.</string>
    <string name="id_number_must_be_10">Must be between 10 to 15 characters or digits</string>
    <string name="both_password_must_matched">Both passwords must match.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="identity_number">Identity Number</string>
    <string name="provide_id_number">Provide ID Number</string>
    <string name="provide_national_id_starts_with_1_or_2">Provide SA National ID number starting with number (1) or resident ID number starting with number (2)</string>
    <string name="provide_national_id_starts_with_7">Provide UAE Id number starting with number (7)</string>
    <string name="registration">Registration</string>
    <string name="notification">Notification</string>
    <string name="create_new_password">Create New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_again">Send Again</string>
    <string name="registered_email">Registered Email</string>
    <string name="open_email_check_inbox_or_spam">Open your email app, check inbox or spam.</string>
    <string name="otp_verification_code">OTP Verification Code</string>
    <string name="netork_status">Internet Status</string>
    <string name="check_network_connection">Please check your network connection.</string>
    <string name="send_mail">Send Mail</string>
    <string name="past_appointment">Past Appointment</string>
    <string name="completed_closed_or_cancelled">Completed, Closed Or Cancelled.</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="account_and_more">Account &amp; More</string>
    <string name="appoints_amp_bookings">Appoints &amp; Bookings</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="booked_pending_or_accepted">Booked, Pending Or Accepted.</string>
    <string name="ongoing_appointment">Ongoing Appointment</string>
    <string name="today_s_now_ongoing">Today\'s, Now Ongoing</string>
    <string name="click_again_to_exit">Please click BACK again to exit</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="hospital">Hospital</string>
    <string name="home_healthcare_service_appointments">Home Healthcare Service Appointments</string>
    <string name="book_a_nurse">Book a Nurse</string>
    <string name="open_for_hourly_or_ntask_based_booking">Open for Hourly or\nTask Based Booking</string>
    <string name="book_a_physiotherapist">Book a Physiotherapist</string>
    <string name="for_30_mins">for 30 mins</string>
    <string name="for_45_mins">for 45 mins</string>
    <string name="book_nurse_assistant">Book Nurse Assistant</string>
    <string name="available_2_4_6_8_hrs">Available 2,4,6,8 hrs</string>
    <string name="book_a_nbabysitter">Book a\nBabysitter</string>
    <string name="doctor_appointment">Doctor Appointment</string>
    <string name="instant_video_consultation">Instant Video Consultation</string>
    <string name="_15_30_mins">for 15 mins</string>
    <string name="home_visit_consultation">Home Visit Consultation</string>
    <string name="hospital_appointment">Hospital Appointment</string>
    <string name="book_a_lab_test">Book a Lab Test</string>
    <string name="get_the_sample_collected_today">Get the sample collected today</string>
    <string name="within_1_day_report_guaranteed">within 1 day report guaranteed</string>
    <string name="appointment">Appointment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="patient">Patient</string>
    <string name="booked">Booked</string>
    <string name="booking">Booking</string>
    <string name="view_details">View Details</string>
    <string name="available_for_booking">Available for Booking</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="not_available_for_booking">Not Available for Booking</string>
    <string name="three_dots_">•••</string>
    <string name="load_more">Load More</string>
    <string name="edit_account">Edit Account</string>
    <string name="save">Save</string>
    <string name="smoking_habits">Smoking Habits</string>
    <string name="alcohol_habits">Alcohol Habits</string>
    <string name="blood_group">Blood Group</string>
    <string name="activity_level">Activity Level</string>
    <string name="food_preference">Food Preference</string>
    <string name="occupation">Occupation</string>
    <string name="select">Select</string>
    <string name="save_patient">Save Patient</string>
    <string name="patient_first_name">Patient First Name</string>
    <string name="patient_last_name">Patient Last Name</string>
    <string name="patient_email">Patient Email</string>
    <string name="patient_age">Patient Age</string>
    <string name="try_again">Try again</string>
    <string name="go_back">Go Back</string>
    <string name="we_will_be_right_back">We\'ll be right back.\nPromise</string>
    <string name="right_back_desc">Our sincere apologies but this page is temporarily unavailable. Check back soon.</string>
    <string name="bad_gateway">Bad gateway</string>
</resources>